# gtable

./: .gitignore  1.db  1.tbl  COPYING  Makefile.am  autogen.sh  configure  configure.ac  gvim.sh  import.xls  tags-dir.sh
docs/: DB.dia  DB_current.dia  Makefile.am
po/: LINGUAS  POTFILES  POTFILES.in  ru.gmo  ru.po
src/: Makefile.am  auditorium_frame.cpp  auditorium_frame.h  celleditableforeign.cpp  celleditableforeign.h  cellrendererforeign.cpp  cellrendererforeign.h  combobox_dialog.cpp  combobox_dialog.h  conditions.cpp  conditions.h  entities_list_widget.cpp  entities_list_widget.h  entry_text_dialog.cpp  entry_text_dialog.h  export_dialog.cpp  export_dialog.h  groups_frame.cpp  groups_frame.h  id_text_scheme.h  import_dialog.cpp  import_dialog.h  lessons_frame.cpp  lessons_frame.h  lessons_widget.cpp  lessons_widget.h  line_editable.h  link_list_widget.cpp  link_list_widget.h  listview.cpp  listview.h  logbuf.cpp  logbuf.h  main.cpp  main_window.cpp  main_window.h  notebook_label_widget.cpp  notebook_label_widget.h  order_dialog.cpp  order_dialog.h  (+15 more)
src/db/: Makefile.am  db.cpp  db.h  entities.cpp  entities.h  id_text_scheme.cpp  id_text_scheme.h  links.cpp  links.h  models.cpp  models.h
src/ga/: Makefile.am  fitness.cpp  fitness.h  ga.cpp  ga.h  graph.cpp  graph.h  individual.cpp  individual.h
src/orm/: Makefile.am  case.h  connection.cpp  connection.h  count.h  data.h  delete.h  expr.h  field.h  foreign_key.cpp  foreign_key.h  insert.cpp  insert.h  primary_key.cpp  primary_key.h  query.cpp  query.h  queryable.h  scheme.h  select.cpp  select.h  subquery.h  table.cpp  table.h  update.h  where.cpp  where.h
ui/: Makefile.am  main_window.glade
win32/: Makefile.am  gtable.sln  gtable.vcproj  win32.c  win32.cpp  win32.h
