noinst_LIBRARIES = liborm.a
liborm_a_SOURCES = connection.cpp \
	data.cpp \
	foreign_key.cpp \
	insert.cpp \
	primary_key.cpp \
	query.cpp \
	table.cpp
noinst_HEADERS = connection.h \
	data.h \
	delete.h \
	field.h \
	foreign_key.h
	insert.h \
	primary_key.h \
	query.h \
	scheme.h \
	select.h \
	table.h \
	update.h \
	where.h

